# ccstats

./: .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  README.md  SECURITY.md  deny.toml  install.sh
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  release.yml  workflow-check.yml
checks/: check_workflow.py  github_pr_evidence.py  pr_gate.py  route_gate.py
docs/: ARCHITECTURE.md
docs/algorithm/: authoritative-token-accounting.md
docs/branding/: README.md
examples/fixtures/: pr-clean-authorized.json  pr-missing-human-auth.json  pr-pending-ci.json  pr-unresolved-thread.json
scripts/: benchmark.py  check-release.sh
specs/GH32/: product.md  tasks.md  tech.md
specs/GH33/: product.md  tasks.md  tech.md
specs/GH34/: product.md  tasks.md  tech.md
specs/GH35/: product.md  tasks.md  tech.md
specs/GH36/: product.md  tasks.md  tech.md
specs/GH37/: product.md  tasks.md  tech.md
specs/GH38/: product.md  tasks.md  tech.md
specs/GH39/: product.md  tasks.md  tech.md
specs/GH40/: product.md  tasks.md  tech.md
specs/GH41/: product.md  tasks.md  tech.md
specs/GH42/: product.md  tasks.md  tech.md
specs/GH43/: product.md  tasks.md  tech.md
specs/GH44/: product.md  tasks.md  tech.md
specs/GH45/: product.md  tasks.md  tech.md
specs/GH46/: product.md  tasks.md  tech.md
specs/GH47/: product.md  tasks.md  tech.md
specs/GH91/: product.md  tasks.md  tech.md
src/: app.rs  config.rs  consts.rs  endpoints_cmd.rs  error.rs  lib.rs  main.rs  sdk.rs  sources_cmd.rs
src/cli/: args.rs  commands.rs  mod.rs
src/core/: aggregator.rs  aggregator_endpoint_tests.rs  cache.rs  dedup.rs  mod.rs  tool_aggregator.rs  tool_types.rs  types.rs
src/data/: loader.rs  mod.rs  types.rs
src/output/: blocks.rs  budget.rs  csv.rs  csv_tests.rs  endpoints.rs  format.rs  json.rs  mod.rs  period.rs  pricing_meta.rs  project.rs  session.rs  statusline.rs  top.rs  (+4 more)
tests/: cli_budget_currency_statusline.rs  cli_claude.rs  cli_codex_source_routing.rs  cli_grok_cursor.rs  cli_integration.rs  cli_kimi.rs  cli_top_date_errors.rs  config_cli_integration.rs  negative_token_integration.rs  sdk_integration.rs  statusline_pricing_cache_integration.rs  test_specrail_gates.py  tools_integration.rs
(+47 files in other folders)
