[package]
name = "ccstats"
version = "0.1.6"
edition = "2021"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
glob = "0.3"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4.5", features = ["derive"] }
comfy-table = "7.1"
rayon = "1.10"
dirs = "5.0"
ureq = { version = "2.10", features = ["json"] }
atty = "0.2"

[profile.release]
lto = true
codegen-units = 1
