[package]
name = "ccstats"
version = "0.1.17"
edition = "2021"
description = "Fast Claude Code token usage statistics CLI"
license = "MIT"
repository = "https://github.com/majiayu000/ccstats"
keywords = ["claude", "anthropic", "token", "usage", "cli"]
categories = ["command-line-utilities"]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
glob = "0.3"
chrono = { version = "0.4", features = ["serde"] }
chrono-tz = "0.10"
clap = { version = "4.5", features = ["derive"] }
comfy-table = "7.1"
rayon = "1.10"
dirs = "5.0"
ureq = { version = "2.10", features = ["json"] }
atty = "0.2"
toml = "0.8"
num-format = "0.4"

[profile.release]
lto = true
codegen-units = 1
