[package]
name = "ccstats"
version = "0.2.34"
edition = "2024"
description = "Fast Claude Code token usage statistics CLI"
license = "MIT"
repository = "https://github.com/majiayu000/ccstats"
keywords = ["claude", "anthropic", "token", "usage", "cli"]
categories = ["command-line-utilities"]

[package.metadata.binstall]
pkg-url = "{ repo }/releases/download/v{ version }/ccstats-{ target }.tar.gz"
pkg-fmt = "tgz"
bin-dir = "ccstats"

[package.metadata.binstall.overrides.x86_64-pc-windows-msvc]
pkg-url = "{ repo }/releases/download/v{ version }/ccstats-{ target }.zip"
pkg-fmt = "zip"
bin-dir = "ccstats.exe"

[dependencies]
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
glob = "0.3.3"
chrono = { version = "0.4.43", features = ["serde"] }
chrono-tz = "0.10.0"
clap = { version = "4.5.56", features = ["derive"] }
comfy-table = "7.2.2"
rayon = "1.11.0"
dirs = "6.0.0"
ureq = { version = "3.1.4", features = ["json"] }
thiserror = "2"
toml = "0.9.11"

[dev-dependencies]
tempfile = "3"

[profile.release]
lto = true
codegen-units = 1
